# turbo-notes-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  PROGRESS.md  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml
.cursor/rules/: Frontend.mdc
.github/workflows/: ci.yml
backend/: DEPLOYMENT.md  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/.config/: Caddyfile  supervisord.conf
backend/api/: ai.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/core/: models.py
backend/core/migrations/: 0001_initial.py  0002_add_category_color.py  0003_add_note_draft.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_categories.py  test_notes.py  test_smoke.py
frontend/: DESIGN_SYSTEM.md  Dockerfile  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/readme/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: auth-guard.test.tsx  auth-guard.tsx  landing-redirect.tsx  logout-button.tsx  session-refresh.tsx
frontend/components/app/: bottom-nav.tsx  categories-sheet.tsx  category-list.tsx  category-row.tsx  category-select.tsx  image-modal.tsx  image-uploader.tsx  images-panel.tsx  markdown-preview.tsx  new-category-row.tsx  note-editor.tsx  note-row.tsx  notes-list.tsx  notes-search.tsx  save-status.tsx  sidebar.tsx
frontend/components/ui/: app-logo.tsx  button.tsx  dialog.tsx  inline-message.tsx  select.tsx  spinner.tsx  voice-input.tsx
frontend/e2e/: README.md  app.spec.ts  auth.setup.ts  login-flow.spec.ts  signup-flow.spec.ts
frontend/lib/: api-client.ts  api.ts  auth-queries.ts  auth-store.ts  categories-queries.test.tsx  categories-queries.ts  create-note-context.tsx  format-date.ts  notes-queries.test.tsx  notes-queries.ts  query-keys.ts  use-app-search-params.ts  use-note-autosave.test.tsx  use-note-autosave.ts  use-speech-recognition.ts  use-suggest-category.test.tsx  use-suggest-category.ts
frontend/lib/api/: api-client.ts  api.ts
frontend/lib/auth/: auth-queries.ts  auth-store.test.ts  auth-store.ts
frontend/lib/categories/: categories-queries.test.tsx  (+3 more)
frontend/types/: speech-recognition.d.ts
(+13 files in other folders)
